# LilacOS

./: .gitignore  README.md  memory-assignment.ipynb  pyproject.toml  requirements.txt  setup.py
python_os/: main.py
src/lilac_os/: main.py
src/lilac_os/core/: hardware.py  hardware_abstraction.py  julie_os.py  memory.py  os_core.py  process.py  terminal_controller.py
src/lilac_os/gui/: memory_viewer.py  terminal.py  window_manager.py
src/python_os/gui/: terminal.py  window_manager.py
src/sandbox/: main.py  python_tutorial.py  sandbox.py
src/sandbox/qp_quipples_and_ideas/: python_tutorial.py  qp_list_and_loop_practice.py
src/sandbox/turtle_homework/: turtle_themed_learning.py
tests/: test_main.py
tests/lilac_os/: test_main.py
tests/sandbox/turtle_homework/: test_peri_turtle_themed_learning.py  test_test_peri_turtle_themed_learning.py  test_turtle_themed_learning.py
tools/: export_project_to_clip.py
