[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "python_os"
version = "0.1.0"
description = "A simple Python OS project"
requires-python = ">=3.8"
dependencies = [
    "PyQt5",
    "pyperclip==1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pylint==3.2.7",
    "black==24.8.0",
    "build==1.2.1",
]

[tool.setuptools]
packages = ["python_os"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
]